--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^4.12.22",
+    "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "react-fast-marquee": "^1.6.5",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
