--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icon": "^1.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "postcss": "^8",
