--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "postcss": "^8",
