--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "daisyui": "^4.12.22",
     "next": "15.1.0",
     "react": "^19.0.0",
